Just a test for git & github

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     neque deleniti. <br />
     <div id="end">
       <a href="./pages/pages-two.html">Suivant</a>
+      <p>Just a test for git & github</p>
     </div>
   </body>
 </html>
